tests/NormalTests/paczka1/fuzzy1/72853924.err
Error in line 4: RBmG32Knfd A682 48,1
Error in line 17: RBmG32Knfd A682 61,80
Error in line 10: RBmG32Knfd S759 34,5
Error in line 19: UVoJDCwagE A594 3,0
Error in line 23: S759 A805 6,5
